--- a/Pharmacy Shop/home.html
+++ b/Pharmacy Shop/home.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pharmacy</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="ads.css">
+    <link rel="stylesheet" href="../Pharmacy Shop/css/styles.css">
+    <link rel="stylesheet" href="../Pharmacy Shop/css/ads.css">
 </head>
 
 <body>
